--- a/css/common.css
+++ b/css/common.css
@@ -5,17 +5,17 @@
 
 
 /* common */
-body                                                {max-width:1200px; margin:0 auto;}
-section 							                {width:100%;height:100%;overflow:hidden;}
-section,.section					                {position:relative;width:100%;}
+body {max-width:1200px;}
+section {width:100%;height:100%;overflow:hidden;}
+section,.section {position:relative;width:100%;}
+.contents {position:relative; width:100%; height:100%; overflow:hidden; z-index:1;}
+.contents .frame .title {position:fixed; width:100%; display: block; text-align: center; height:63px; font-size:18px; color:#434D54; border-bottom:1px solid rgba(67, 77, 84, 0.05); padding:22px 0; font-weight:bold;}
+.contents .frame {width:100%; height:100vh; position:fixed; overflow:hidden;}
 
 /* index */
-#index .contents {position:relative; width:100%; height:100%; overflow:hidden; z-index:1;}
-#index .contents .frame .title {position:fixed; width:100%; display: block; text-align: center; height:63px; font-size:18px; color:#434D54; border-bottom:1px solid rgba(67, 77, 84, 0.05); padding:22px 0; font-weight:bold;}
-#index .contents .frame {width:100%; height:100vh; position:fixed; overflow:hidden;}
 #index .contents .frame .wrap {width:100%; height:calc(100vh - 143px); position:relative;}
 #index .contents .frame h3 strong, #index .contents .frame h3 span {display:block; text-align: center;}
-#index .contents .frame h3 {position:absolute; width:100%; top:50%; left:50%; transform:translate(-50%,-50%); z-index:5;}
+#index .contents .frame h3 {position:absolute; width:auto; top:50%; left:50%; margin:-34.5px 0 0 -118px; z-index:5;}
 #index .contents .frame h3 strong {font-size:24px; color:#2D4E7E; font-weight:bold;}
 #index .contents .frame h3 span {font-size:14px; color:#798B97; margin-top:24px; line-height:1.5;}
 #index .contents .frame a.btn {position:fixed; bottom:0; left:0; font-size:18px; text-align:center; padding:30px 0; font-weight:bold; height:80px; width:100%; z-index:5;}
@@ -36,6 +36,16 @@ section,.section					                {position:relative;width:100%;}
 #index .contents .Swipers .swiper-button-pagination .swiper-pagination-bullet {background-color:#fff; opacity:1;}
 #index .contents .Swipers .swiper-button-pagination .swiper-pagination-bullet-active {background-color:#2D4E7E;}
 
+#cal .contents_wrap {position:relative; top:64px; width:100%; height:100%; overflow: hidden; z-index:5; margin-top:12px;}
+#cal .contents_wrap table {position: relative;; width:100%; max-width:1200px; height:calc(100vh - 63px); margin:0 auto;}
+#cal .contents_wrap table thead {height:40px;}
+#cal .contents_wrap table thead tr th {position: relative;}
+#cal .contents_wrap table thead tr th {top:7px; font-size:16px; font-weight:500; color:#253858;}
+
+#cal .contents_wrap table tbody {position: relative; height:calc(100vh - 127px);}
+#cal .contents_wrap table tbody tr {height:calc(100% / 5);}
+#cal .contents_wrap table tbody tr td {position:relative; font-size:14px; text-align:center; top:12px; left: 7px; line-height:26px; color:#333; font-weight:500; cursor:pointer;}
+#cal .contents_wrap table tbody tr td::before {content:""; display:none; background-color:;}
 
 
 @media (width:767px) {
