--- a/css/common.css
+++ b/css/common.css
@@ -36,7 +36,7 @@ section,.section {position:relative;width:100%;}
 #index .contents .Swipers .swiper-button-pagination .swiper-pagination-bullet {background-color:#fff; opacity:1;}
 #index .contents .Swipers .swiper-button-pagination .swiper-pagination-bullet-active {background-color:#2D4E7E;}
 
-#cal .contents_wrap {position:relative; top:64px; width:100%; height:100%; overflow: hidden; z-index:5; margin-top:12px;}
+#cal .contents_wrap {position:relative; top:64px; width:100%; height:100%; overflow: hidden;  margin-top:12px;}
 #cal .contents_wrap table {position: relative;; width:100%; max-width:1200px; height:calc(100vh - 63px); margin:0 auto;}
 #cal .contents_wrap table thead {height:40px;}
 #cal .contents_wrap table thead tr th {position: relative;}
@@ -45,7 +45,25 @@ section,.section {position:relative;width:100%;}
 #cal .contents_wrap table tbody {position: relative; height:calc(100vh - 127px);}
 #cal .contents_wrap table tbody tr {height:calc(100% / 5);}
 #cal .contents_wrap table tbody tr td {position:relative; font-size:14px; text-align:center; top:12px; left: 7px; line-height:26px; color:#333; font-weight:500; cursor:pointer;}
-#cal .contents_wrap table tbody tr td::before {content:""; display:none; background-color:;}
+/* #cal .contents_wrap table tbody tr td::before {content:""; display:none; background-color:;} */
+
+#cal .todo_list {width:100%; max-width:1200px; height:100%; top:0; left:50%; transform:translateX(-50%); margin:0 auto; position:absolute; overflow:hidden;}
+#cal .todo_list .bg{display:block; position:absolute; top:0; left:0; background-color:#000; opacity:0.7; width:100%; height:100%; overflow:hidden; z-index:100;}
+#cal .todo_list .list  h5 {display:block; text-align:center; font-size:18px; font-weight:bold; color:#434D54; height:80px; padding:30px 0; border-bottom:1px solid rgba(242, 243, 247, 1);}
+#cal .todo_list .list {width:100%;  height:calc( 100vh - 63px ); position:absolute; top:63px; background-color:#fff; border-radius:20px 20px 0 0; z-index:100; transition:0.5s;}
+
+#cal .todo_list .list .todo_int {margin-top:16px;}
+#cal .todo_list .list .todo_int strong {display: block; color:#2D4E7E; font-size:14px; font-weight:700; height:32px;}
+#cal .todo_list .list .todo_int span {display: block; color:#798B97; font-size:14px; font-weight:500; height:40px; line-height:20px;}
+
+#cal .todo_list .list div {padding:0 16px;}
+#cal .todo_list .list div:not(.todo_int) {margin-top:32px;}
+#cal .todo_list .list div b {display:block; font-size:14px; font-weight:700; color:#333; margin-bottom:10px;}
+#cal .todo_list .list div input {display:block; width:calc(100% - 32px); height:48px; border:1px solid rgba(242, 243, 247, 1);}
+#cal .todo_list .list div:not(.todo_tit) input {width:45%; display:inline-block;}
+#cal .todo_list .list div em {display:inline-block; padding:0 8px;}
+
+#cal .todo_list .list a {display:block; width:100%; height:80px; position:absolute; bottom:0; left:0; background-color:#3986FF; color:#fff; font-size:18px; text-align:center; font-weight:700; padding:30px 0;}
 
 
 @media (width:767px) {
